Remove erronous setTextureSize() as it is already set previously

This was causing problems with the FrameBuffer render target when
displaying on a HiDpi display as it would end up with a size which was not
accounting for the devicePixelRatio.

Task-number: QTBUG-52901
Change-Id: I587e2578d670cfecb016aae92c4190a37e7412a1
Reviewed-by: Gunnar Sletta <gunnar@sletta.org>