src/quick/scenegraph/util/qsgdefaultpainternode.cpp
@@ -310,7 +310,6 @@ void QSGDefaultPainterNode::updateRenderTarget()
     if (m_texture)
         delete m_texture;
 
-    texture->setTextureSize(m_size);
     m_texture = texture;
 }
 
